fixed contact form on small screens

--- a/s.css
+++ b/s.css
@@ -69,10 +69,9 @@ footer nav{display:inline-block;-webkit-border-radius:16px;border-radius:16px;ba
 .contact .content .detail h3{padding:1em 0}
 @media screen and (max-width:970px){.contact .content .detail{width:100%}
 }@media screen and (max-width:900px){.contact .content .detail{width:26em;max-width:100%}
-}.contact .content form{max-width:100%;}
-.contact .content form label{width:80px;display:inline-block;vertical-align:middle}
-.contact .content .fields,.contact .content .message{display:inline-block;vertical-align:top;text-shadow:0 1px 0 rgba(255,255,255,0.4)}
-.contact .content textarea{width:485px;margin-left:30px;max-width:100%;height:300px}
+}.contact .content form{width:500px;max-width:100%;text-align:left;}
+.contact .content form label{width:5em;display:inline-block;vertical-align:middle}
+.contact .content textarea{width:100%;height:300px}
 .contact .content .detail .col1,.contact .content .detail .col2{width:50%;display:inline-block;vertical-align:top;}
 @media screen and (max-width:900px){.contact .content .detail .col1,.contact .content .detail .col2{width:100%}
 }.contact .content .detail p{margin:0}
